--- a/index.html
+++ b/index.html
@@ -187,10 +187,13 @@
     <audio id="wrongSound" src="https://www.soundjay.com/buttons/sounds/button-10.mp3"></audio>
   </section>
 
-  <section id="video">
-    <h2>Pedro Video</h2>
-    <iframe width="100%" height="315" src="" title="Pedro Pascal" frameborder="0" allowfullscreen></iframe>
-  </section>
+<section id="video">
+  <h2>Pedro Video</h2>
+  <video width="100%" height="315" controls>
+    <source src="videos/mein-tiktok-video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</section>
 
   <section id="love">
     <h2>Pedro tells you something ... 💌</h2>
