--- a/index.html
+++ b/index.html
@@ -188,13 +188,17 @@
   </section>
 
 <section id="video">
-  <h2>Pedro Video</h2>
-  <video width="100%" height="315" controls>
-    <source src="videos/mein-tiktok-video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+  <h2>Pedro Video Links 🎬</h2>
+  <div class="cinema">
+    <p>Click on a video below to watch Pedro in action:</p>
+    <ul style="list-style: none; padding: 0;">
+      <li><a href="https://drive.google.com/your-link-1" target="_blank">📹 Video 1: Pedro says hi!</a></li>
+      <li><a href="https://drive.google.com/your-link-2" target="_blank">📹 Video 2: Pedro's best moments</a></li>
+      <li><a href="https://drive.google.com/your-link-3" target="_blank">📹 Video 3: A love message just for you ❤️</a></li>
+    </ul>
+  </div>
 </section>
-
+  
   <section id="love">
     <h2>Pedro tells you something ... 💌</h2>
     <div class="love">
